[gd_scene load_steps=10 format=3 uid="uid://bropqibhxc8jm"]

[ext_resource type="Script" path="res://scripts/Microwave.gd" id="1_fe1up"]
[ext_resource type="Texture2D" uid="uid://br241jsjdbqil" path="res://Art/Modern_Interiors_RPG_Maker_Version/RPG_MAKER_MV/Animated_Objects/!Small_doors_and_others.png" id="2_wr1gd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dttgc"]
atlas = ExtResource("2_wr1gd")
region = Rect2(0, 384, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gm0y"]
atlas = ExtResource("2_wr1gd")
region = Rect2(0, 480, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8xew"]
atlas = ExtResource("2_wr1gd")
region = Rect2(0, 576, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m22q"]
atlas = ExtResource("2_wr1gd")
region = Rect2(0, 672, 48, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_cppuu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dttgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gm0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8xew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m22q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8xew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gm0y")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dttgc")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1875f"]
radius = 241.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqfec"]
size = Vector2(48, 27)

[node name="Microwave" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_fe1up")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 8)
sprite_frames = SubResource("SpriteFrames_cppuu")
animation = &"walk"

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_1875f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_oqfec")

[node name="attack_timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
